--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ pillow~=11.1.0
 pdf2image~=1.17.0
 pytesseract~=0.3.13
 matplotlib~=3.10.1
-poppler-utils~=latest
+poppler-utils~=0.1.0
 watchdog~=6.0.0
+redis~=5.2.1
+numpy~=1.26.4
+redisvl~=0.4.1
