--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-opencv-python~=4.11.0.86
-pillow~=11.1.0
-pdf2image~=1.17.0
-pytesseract~=0.3.13
-matplotlib~=3.10.1
-poppler-utils~=0.1.0
-watchdog~=6.0.0
-redis~=5.2.1
-numpy~=1.26.4
-redisvl~=0.4.1
-fastapi~=0.115.11
+opencv-python
+pillow
+pdf2image
+pytesseract
+matplotlib
+poppler-utils
+watchdog
+redis
+numpy
+redisvl
+fastapi
