--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-opencv-python
-pillow
-pdf2image
-pytesseract
+opencv-python~=4.11.0.86
+pillow~=11.1.0
+pdf2image~=1.17.0
+pytesseract~=0.3.13
 matplotlib
 poppler-utils
-watchdog
-redis
+watchdog~=6.0.0
+redis~=5.2.1
 numpy
-redisvl
-fastapi
+redisvl~=0.4.1
+fastapi~=0.115.11
+uvicorn~=0.34.0
+openai~=1.68.2
+pinecone~=6.0.2
